...
                 label: "Leaf",
								 font: .system(size: 21),
								 labelSpacing: 0,
                 isEnabled: isLeafEnabled,
								 action: onNewLeaf)
              .offset(y:isInline ? 2.1 : -1)
              .accessibilityIdentifier("createLeafFAB")
            icon(systemImage: "book.badge.plus",
                 label: "Book",
                 isEnabled: isBookEnabled,
                 action: onNewBook)
              // .offset(y:isInline?)
              .accessibilityIdentifier("createBookFAB")
...
